Update build.yml for Azure Pipelines

--- a/build.yml
+++ b/build.yml
@@ -21,6 +21,7 @@ steps:
       
   - task: VSBuild@1
     displayName: 'Build solution without Android'
+    enabled: false
     inputs:
       solution: 'XamarinDotNetCoreIssue.sln'
       platform: 'any cpu'
@@ -30,6 +31,8 @@ steps:
     displayName: 'Build solution including Android'
     inputs:
       solution: 'XamarinDotNetCoreIssueAndroid.sln'
-      msbuildArgs: '/restore /p:RestorePackagesPath=packages'
+      msbuildArgs: '/restore /p:RestorePackagesPath=../packages'
       platform: 'any cpu'
       configuration: 'release'
+      createLogFile: true
+      logFileVerbosity: 'diagnostic'
