--- a/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue.Android/XamarinDotNetCoreIssue.Android.csproj
+++ b/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue.Android/XamarinDotNetCoreIssue.Android.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Diagnostics.EventLog">
+      <Version>4.7.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting">
       <Version>3.1.1</Version>
     </PackageReference>
