--- a/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue.csproj
+++ b/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.0.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991537" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
