--- a/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue.Android/XamarinDotNetCoreIssue.Android.csproj
+++ b/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue.Android/XamarinDotNetCoreIssue.Android.csproj
@@ -59,6 +59,9 @@
     <PackageReference Include="Microsoft.Extensions.Hosting">
       <Version>3.0.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Diagnostics.EventLog">
+      <Version>4.7.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991537" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
