--- a/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue.Android/XamarinDotNetCoreIssue.Android.csproj
+++ b/XamarinDotNetCoreIssue/XamarinDotNetCoreIssue.Android/XamarinDotNetCoreIssue.Android.csproj
@@ -22,6 +22,7 @@
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <ResolveAssemblies/>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
