--- a/nuget.config
+++ b/nuget.config
@@ -1,3 +1,6 @@
-<config>
-  <add key="globalPackagesFolder" value="Packages" />
-</config>
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <config>
+    <add key="globalPackagesFolder" value="Packages" />
+  </config>
+</configuration>
